--- a/Helpdesk/views/helpdesk_ticket_views.xml
+++ b/Helpdesk/views/helpdesk_ticket_views.xml
@@ -4,8 +4,13 @@
         <field name="model">helpdesk.ticket</field>
         <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form" />
         <field name="arch" type="xml">
+            <!-- Replace the user_id field with the assigned_user_id field -->
             <field name="user_id" position="replace">
                 <field name="assigned_user_id" />
+            </field>
+            <!-- Add the member_ids field as invisible -->
+            <field name="team_id" position="after">
+                <field name="member_ids" invisible="1" />
             </field>
         </field>
     </record>
