--- a/Helpdesk/views/helpdesk_ticket_views.xml
+++ b/Helpdesk/views/helpdesk_ticket_views.xml
@@ -9,10 +9,9 @@
                 <field name="assigned_user_id" />
             </field>
             <!-- Add the member_ids field as invisible -->
-             <xpath expr="//field[@name='member_ids']" position="replace">
-               <field name="member_ids" widget="many2many_tags" options="{'no_create': True}" />
-            </xpath>
-            
+            <field name="team_id" position="after">
+                <field name="member_ids" invisible="1" />
+            </field>
         </field>
     </record>
 </odoo>
