--- a/Helpdesk/views/helpdesk_ticket_views.xml
+++ b/Helpdesk/views/helpdesk_ticket_views.xml
@@ -1,17 +1,16 @@
 <odoo>
     <record id="view_helpdesk_ticket_form" model="ir.ui.view">
-        <field name="name">helpdesk.ticket.form.inherit</field>
+        <field name="name">helpdesk.ticket.form</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form" />
         <field name="arch" type="xml">
-            <!-- Replace the user_id field with the assigned_user_id field -->
-            <field name="user_id" position="replace">
-                <field name="assigned_user_id" />
-            </field>
-            <!-- Add the member_ids field as invisible -->
-            <field name="team_id" position="after">
-                <field name="member_ids" invisible="1" />
-            </field>
+            <form string="Helpdesk Ticket">
+                <sheet>
+                    <group>
+                        <field name="team_member_ids" widget="many2many_tags"/>
+                        <field name="assigned_employee_id"/>
+                    </group>
+                </sheet>
+            </form>
         </field>
     </record>
 </odoo>
