--- a/Helpdesk/views/helpdesk_ticket_views.xml
+++ b/Helpdesk/views/helpdesk_ticket_views.xml
@@ -8,6 +8,10 @@
             <field name="user_id" position="replace">
                 <field name="assigned_user_id" />
             </field>
+            <!-- Add the member_ids field to the form view -->
+            <field name="team_id" position="after">
+                <field name="member_ids" readonly="1"/>
+            </field>
         </field>
     </record>
 </odoo>
